RESOLVED FIXED180498
When the iPhone keyboard is up, sometimes we never commit a stable update and re-show the caret
https://bugs.webkit.org/show_bug.cgi?id=180498
Summary When the iPhone keyboard is up, sometimes we never commit a stable update and...
Simon Fraser (smfr)
Reported 2017-12-06 13:15:09 PST
When the iPhone keyboard is up, sometimes we never commit a stable update and re-show the caret
Attachments
Patch (7.17 KB, patch)
2017-12-06 13:18 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2017-12-06 13:18:35 PST
Radar WebKit Bug Importer
Comment 2 2017-12-06 13:19:06 PST
Tim Horton
Comment 3 2017-12-06 13:23:29 PST
Comment on attachment 328614 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328614&action=review > Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:1628 > + UIEdgeInsets contentInsets = scrollView.adjustedContentInset; > +#else > UIEdgeInsets contentInsets = scrollView.contentInset; > +#endif We likely need to audit other use of contentInset.
Simon Fraser (smfr)
Comment 4 2017-12-08 16:00:42 PST
Seungyoun Yi
Comment 5 2017-12-11 18:23:17 PST
Hello! Thanks for fixing this issue! This is one of our major problem in Never Keyboard! :) Again, thanks a lot and please release this Webkit! Thank you! Seungyoun Yi
Seungyoun Yi
Comment 6 2017-12-11 18:24:25 PST
Ooops Naver Keyboard. I tested in simulator and works great!
Simon Fraser (smfr)
Comment 7 2017-12-11 18:33:01 PST
Did you file a separate bug report for this?
Seungyoun Yi
Comment 8 2017-12-11 18:37:05 PST
Nope, I research WebKit bugs to report this bug, but I found same issue in here. However, I report this bug but not finished yet.. lol. https://bugs.webkit.org/show_bug.cgi?id=179602 (rdar://problem/34969608) I think this bug is hard :( Whatever, Thanks! Seungyoun Yi
Note You need to log in before you can comment on or make changes to this bug.